2020-December-31 Struan Robertson

		* Documentation update.

2020-December-28 Struan Robertson

		* Documentation update.

2020-December-03 Struan Robertson

		* HinderedRotorQM1D.cpp: Allow for the exclusion of hindered rotors from a transition state.

		* pentyl_isomerization_restrainedTS.xml: Further updates of cyclic transition state test.

2020-November-29 Struan Robertson

		* gWellProperties.cpp: Corrections to Lennard-Jones implementation.

		* gDensityOfStates.cpp: Updated to store imaginary frequency if transition state parsed.

		* pentyl_isomerization_restrainedTS.xml: Update of cyclic transition state test to include 
		tunnelling.

2020-November-22 Struan Robertson

		* examples/Butan-1-ol: New tests for Lennard-Jones calculation methods and Biexponential 
		down model.

		* Documentation update.

2020-November-15 Struan Robertson

		* BiExponentialDown.cpp: Update of Biexponential energy transfer Kernel to account for 
		different bath gases.

2020-November-08 Struan Robertson

		* BiExponentialDown.cpp: Initial revision of Biexponential energy transfer Kernel.

		* gWellProperties.h/.cpp, gStructure.h/.cpp: Functional search to support Jasper 
		Lennard-Jones collision parameters.

2020-October-31 Struan Robertson

		* Update of Linux build and Make scripts.

		* Documentation update.

2020-October-28 Struan Robertson

		* CollisonOperator.h/.cpp, gWellProperties.h/.cpp, gBathProperties.h/.cpp: Initial implementation 
		of Jasper Lennard-Jones collision parameters.

2020-October-25 Struan Robertson

		* CollisonOperator.h/.cpp, MesmerFlags.h/.cpp, System.cpp: Initial implementation of 
		equilibration analysis.

2020-September-11 Struan Robertson

		* System.cpp: Added extra MPI barrier to help synchronize processes. Altered calculation
		of MaxGrn on input.

		* FourierGrid1D.cpp: Fixed error strings.

2020-August-11 Struan Robertson

		* Rdouble.cpp: Fix for derived variable bug, which occurred when the two variables involved
		were not energies.