@@ -1,3 +1,8 @@
+2021-January-10 Struan Robertson
+
+		* ConditionsManager.h/.cpp, System.h/.cpp: Restructuring of code in preparation for
+		data grouping Chi^2 calculations.
+
 2020-December-31 Struan Robertson
 
 		* Documentation update.
